# shadertoy

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  configure.ps1  main.cpp  shader.glsl  shaders.h  vcpkg.json
src/: main.cpp  shaders.h
